kubernetes/bootstrap/kyverno/policies/add-restricted-existing-namespace-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-restricted-existing-namespaces
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: label-restricted-namespaces
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          <(name): "!kube-system"
          labels:
            pod-security.kubernetes.io/enforce: restricted
